--- a/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_fr_FR.json
@@ -411,7 +411,7 @@
   "privateDatabase_metrics_time_range_WEEK": "Dernière semaine",
   "privateDatabase_metrics_time_range_MONTH": "Dernier mois",
   "privateDatabase_order_sql_type_start_label": "Start SQL",
-  "privateDatabase_order_sql_type_dbaas_label": "CloudDB",
+  "privateDatabase_order_sql_type_dbaas_label": "Web Cloud Databases",
   "privateDatabase_tabs_whitelist_webhosting_network_access_title": "Accès aux hébergements web OVHcloud",
   "private_database_tabs_whitelist_webhosting_network_access_description": "Autoriser les hébergements web OVHcloud à accéder à la base de données",
   "private_database_tabs_whitelist_webhosting_network_access_success": "Le changement d'autorisation d'accès des hébergements web OVHcloud à la base de données a bien été pris en compte.",
@@ -479,7 +479,7 @@
   "privateDatabase_modale_cpu_throttle_tab_duration": "Durée de la saturation",
   "privateDatabase_modale_cpu_throttle_ongoing_cpu_throttle": "Saturation CPU en cours",
   "privateDatabase_modale_cpu_throttle_no_cpu_throttle": "Pas de saturation CPU.",
-  "privateDatabase_modale_cpu_throttle_info_order": "Nous vous conseillons d'améliorer vos requêtes et index ou de répartir vos bases de données sur plus d'instances CloudDB pour pallier à ces problèmes.",
+  "privateDatabase_modale_cpu_throttle_info_order": "Nous vous conseillons d'améliorer vos requêtes et index ou de répartir vos bases de données sur plus d'instances Web Cloud Databases pour pallier à ces problèmes.",
   "privateDatabase_modale_oom_title": "Dépassements de la mémoire vive",
   "privateDatabase_modale_oom_state_button": "Vérifier les dépassements de la mémoire vive",
   "privateDatabase_modale_oom_confirm_button": "Commander plus de RAM",
@@ -489,7 +489,7 @@
   "privateDatabase_modale_oom_tab_size_reached": "Taille atteinte",
   "privateDatabase_modale_oom_tab_uptime": "Temps depuis le dernier dépassement",
   "privateDatabase_modale_oom_no_oom": "Pas de dépassement de la mémoire vive.",
-  "privateDatabase_modale_oom_info_order": "Nous vous conseillons d'augmenter la RAM de votre CloudDB pour pallier à ces problèmes.",
+  "privateDatabase_modale_oom_info_order": "Nous vous conseillons d'augmenter la RAM de votre base de données Web Cloud Databases pour pallier à ces problèmes.",
   "privateDatabase_tabs_list_extensions_title": "Extensions",
   "privateDatabase_tabs_list_extensions_extension": "Extension",
   "privateDatabase_tabs_list_extensions_description": "Description",
