--- a/packages/manager/apps/web/client/app/private-database/order/clouddb/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/private-database/order/clouddb/translations/Messages_fr_FR.json
@@ -1,6 +1,6 @@
 {
-  "private_database_order_clouddb_title": "Commander une base de données Cloud Databases",
-  "private_database_order_clouddb_subtitle": "L’offre Cloud Databases nécessite un service ayant accès au réseau internet public.",
+  "private_database_order_clouddb_title": "Commander une base de données Web Cloud Databases",
+  "private_database_order_clouddb_subtitle": "L’offre Web Cloud Databases nécessite un service ayant accès au réseau internet public.",
 
   "private_database_order_clouddb_customization": "Personnalisation",
   "private_database_order_clouddb_server_version": "Version du serveur",
@@ -31,6 +31,8 @@
   "private_database_order_clouddb_payment_get_checkout_error": "Une erreur est survenue lors de la récupération des informations de votre panier.",
   "private_database_order_clouddb_payment_get_payment_method_error": "Une erreur est survenue lors de la récupération des moyens de paiement.",
   "private_database_order_clouddb_payment_checkout_error": "Une erreur est survenue lors du paiement de votre panier.",
-  "private_database_order_clouddb_payment_checkout_success": "Votre commande pour votre base de données Cloud Databases a bien été prise en compte. Votre compte {{accountId}} a bien été débité de {{price}}. <a class=\"d-block\" target=\"_blank\" href=\"{{billUrl}}\" rel=\"noopener\">Voir ma facture</a>",
-  "private_database_order_clouddb_bill_success": "Votre <a target=\"_blank\" href=\"{{billUrl}}\" rel=\"noopener\">bon de commande</a> a été généré avec succès. Votre base de données Cloud Databases sera active après le paiement de celui-ci."
+  "private_database_order_clouddb_payment_checkout_success": "Votre commande pour votre base de données Web Cloud Databases a bien été prise en compte. Votre compte {{accountId}} a bien été débité de {{price}}.",
+  "private_database_order_clouddb_payment_checkout_success_link": "Voir ma facture",
+  "private_database_order_clouddb_bill_success": "Votre {{link}} a été généré avec succès. Votre base de données Web Cloud Databases sera active après le paiement de celui-ci.",
+  "private_database_order_clouddb_bill_success_link": "bon de commande"
 }
