--- a/packages/manager/apps/web/client/app/private-database/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/private-database/translations/Messages_fr_FR.json
@@ -1,4 +1,4 @@
 {
-  "private_databases_title": "Bases de données",
+  "private_databases_title": "Web Cloud Databases",
   "private_databases_order": "Commander"
 }
