--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pl_PL.json
@@ -172,5 +172,11 @@
   "telecom_pack_migration_confirm_resume_contact_owner": "Dane kontaktu",
   "telecom_pack_migration_confirm_resume_contact_phone": "Numer telefonu, pod którym w razie potrzeby można się z Tobą w skontaktować.",
   "telecom_pack_migration_confirm_resume_phone_form_error": "Wprowadź poprawny numer telefonu.",
-  "telecom_pack_migration_choose_offer_error": "Wystąpił błąd podczas pobierania ofert: {{error}}"
+  "telecom_pack_migration_choose_offer_error": "Wystąpił błąd podczas pobierania ofert: {{error}}",
+  "telecom_pack_migration_modem_yes": "Modem dziewięć ({{ price }} netto / m-c)",
+  "telecom_pack_migration_modem_recycled": "Modem z recyklingu ({{ price }} netto / m-c)",
+  "telecom_pack_migration_modem_no": "Brak modemu",
+  "telecom_pack_migration_modem_required": "Wybór typu modemu jest obowiązkowy",
+  "telecom_pack_migration_confirm_modem_rental_yes": "Dzierżawa modemu",
+  "telecom_pack_migration_confirm_modem_rental_recycled": "Wynajem modemu z recyklingu"
 }
