--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_pt_PT.json
@@ -101,7 +101,7 @@
   "telecom_pack_migration_confirm_no_commitment": "Ce changement d’offre n’est sujet à aucun réengagement.",
   "telecom_pack_migration_confirm_commitment": "Un réengagement de {{ month }} mois débutera à la date de facturation.",
   "telecom_pack_migration_confirm_new_offer_price": "Votre nouvel abonnement mensuel s'élève à : <span class=\"text-price\">{{ price }}</span> <span class=\"text-infos\">HT/mois</span>, applicable dès livraison de votre nouvel accès. Vous en serez informé par e-mail.",
-  "telecom_pack_migration_confirm_shipping": "Selecionou o modo de entrega do seu novo modem por transportador (+ {{ transportPrice }}€ + IVA).",
+  "telecom_pack_migration_confirm_shipping": "Selecionou o modo de entrega do seu novo modem por transportador (+ {{ price }}€ + IVA).",
   "telecom_pack_migration_confirm_first_mensuality": "A sua primeira mensalidade será de {{ price }} + IVA.",
   "telecom_pack_migration_confirm_service_to_delete_title": "Services qui seront supprimés",
   "telecom_pack_migration_confirm_service_to_delete_total": "No total, {{count}} serviços serão eliminados durante a alteração da oferta.",
@@ -157,5 +157,12 @@
   "telecom_pack_migration_confirm_install_fees": "As taxas de instalação são de {{ price }} + IVA",
   "telecom_pack_migration_confirm_resume_contact_owner": "Informações de contacto",
   "telecom_pack_migration_confirm_resume_contact_phone": "Número de telefone através do qual poderá ser contactado, se necessário",
-  "telecom_pack_migration_confirm_resume_phone_form_error": "O número introduzido deve ser válido."
+  "telecom_pack_migration_confirm_resume_phone_form_error": "O número introduzido deve ser válido.",
+  "telecom_pack_migration_choose_offer_error": "Ocorreu um erro durante a recuperação das ofertas: {{ error }}.",
+  "telecom_pack_migration_modem_yes": "Modem nove ({{ price }} s/IVA/mês)",
+  "telecom_pack_migration_modem_recycled": "Modem reciclado ({{ price }} s/IVA/mês)",
+  "telecom_pack_migration_modem_no": "Sem modem",
+  "telecom_pack_migration_modem_required": "A seleção de um tipo de modem é obrigatória",
+  "telecom_pack_migration_confirm_modem_rental_yes": "Locação modem nove",
+  "telecom_pack_migration_confirm_modem_rental_recycled": "Locação modem reciclada"
 }
